--- a/gisea_regalos/index.html
+++ b/gisea_regalos/index.html
@@ -438,7 +438,8 @@
 							<div class="product-item llaveros">
 								<div class="product product_filter">
 									<div class="product_image">
-										<img src="images/llavero_topollillo.PNG" alt="" style="height: 37vh; padding: 10px;">
+										<img src="images/llavero_topollillo.PNG" alt=""
+											style="height: 40vh; padding: 10px;">
 									</div>
 									<div
 										class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center">
@@ -454,14 +455,120 @@
 
 							<!-- Product 10 -->
 
-							<div class="product-item caricaturas">
+							<div class="product-item animalitos">
 								<div class="product product_filter">
 									<div class="product_image">
-										<img src="images/link.PNG" alt="" style="height: 35vh; padding: 20px;">
+										<img src="images/ajolotes.PNG" alt="" style="height: 35vh; padding: 20px;">
 									</div>
 									<div class="favorite"></div>
 									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Link</a></h6>
+										<h6 class="product_name"><a href="single.html">Ajolotitos</a></h6>
+										<div class="product_price">$180.00</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- Product 11 -->
+
+							<div class="product-item animalitos">
+								<div class="product product_filter">
+									<div class="product_image">
+										<img src="images/dinosaurio_azul.PNG" alt=""
+											style="height: 35vh; padding: 20px;">
+									</div>
+									<div class="favorite"></div>
+									<div class="product_info">
+										<h6 class="product_name"><a href="single.html">Dinosaurio</a></h6>
+										<div class="product_price">$180.00</div>
+									</div>
+								</div>
+							</div>
+							<!-- Product 12 -->
+
+							<div class="product-item animalitos">
+								<div class="product product_filter">
+									<div class="product_image">
+										<img src="images/gato.PNG" alt="" style="height: 35vh; padding: 20px;">
+									</div>
+									<div class="favorite"></div>
+									<div class="product_info">
+										<h6 class="product_name"><a href="single.html">Gato</a></h6>
+										<div class="product_price">$180.00</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- Product 13 -->
+
+							<div class="product-item flores">
+								<div class="product product_filter">
+									<div class="product_image">
+										<img src="images/girasoles.PNG" alt="" style="height: 35vh; padding: 20px;">
+									</div>
+									<div class="favorite"></div>
+									<div class="product_info">
+										<h6 class="product_name"><a href="single.html">Girasoles</a></h6>
+										<div class="product_price">$180.00</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- Product 14 -->
+
+							<div class="product-item flores">
+								<div class="product product_filter">
+									<div class="product_image">
+										<img src="images/rosas_girasoles.PNG" alt=""
+											style="height: 35vh; padding: 20px;">
+									</div>
+									<div class="favorite"></div>
+									<div class="product_info">
+										<h6 class="product_name"><a href="single.html">Rosas y Girasoles</a></h6>
+										<div class="product_price">$180.00</div>
+									</div>
+								</div>
+							</div>
+							<!--Product 15-->
+
+							<div class="product-item llaveros">
+								<div class="product product_filter">
+									<div class="product_image">
+										<img src="images/llavero_leon.PNG" alt="" style="height: 35vh; padding: 20px;">
+									</div>
+									<div class="favorite"></div>
+									<div class="product_info">
+										<h6 class="product_name"><a href="single.html">Llavero Leon</a></h6>
+										<div class="product_price">$180.00</div>
+									</div>
+								</div>
+							</div>
+
+							<!--Product 16-->
+
+							<div class="product-item caricaturas">
+								<div class="product product_filter">
+									<div class="product_image">
+										<img src="images/pulpito_chicas_superpoderosas.PNG" alt=""
+											style="height: 35vh; padding: 20px;">
+									</div>
+									<div class="favorite"></div>
+									<div class="product_info">
+										<h6 class="product_name"><a href="single.html">Pulpito Chicas Superpoderosas</a>
+										</h6>
+										<div class="product_price">$180.00</div>
+									</div>
+								</div>
+							</div>
+							<!--Product 17-->
+
+							<div class="product-item flores">
+								<div class="product product_filter">
+									<div class="product_image">
+										<img src="images/tulipanes.PNG" alt="" style="height: 35vh; padding: 20px;">
+									</div>
+									<div class="favorite"></div>
+									<div class="product_info">
+										<h6 class="product_name"><a href="single.html">Tulipanes</a></h6>
 										<div class="product_price">$180.00</div>
 									</div>
 								</div>
@@ -472,7 +579,7 @@
 			</div>
 		</div>
 
-		<!-- Deal of the week -->
+		<!-- Deal of the week 
 
 		<div class="deal_ofthe_week">
 			<div class="container">
@@ -511,7 +618,7 @@
 				</div>
 			</div>
 		</div>
-
+	-->
 		<!-- Best Sellers -->
 
 		<div class="best_sellers">
@@ -519,7 +626,7 @@
 				<div class="row">
 					<div class="col text-center">
 						<div class="section_title new_arrivals_title">
-							<h2>Best Sellers</h2>
+							<h2>Mas Vendidos</h2>
 						</div>
 					</div>
 				</div>
@@ -531,20 +638,17 @@
 								<!-- Slide 1 -->
 
 								<div class="owl-item product_slider_item">
-									<div class="product-item">
-										<div class="product discount">
+									<div class="product-item caricaturas">
+										<div class="product product_filter">
 											<div class="product_image">
-												<img src="images/product_1.png" alt="">
+												<img src="images/pulpito_chicas_superpoderosas.PNG" alt=""
+													style="height: 25vh; padding: 10px;">
 											</div>
-											<div class="favorite favorite_left"></div>
-											<div
-												class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center">
-												<span>-$20</span>
-											</div>
+											<div class="favorite"></div>
 											<div class="product_info">
-												<h6 class="product_name"><a href="single.html">Fujifilm X100T 16 MP
-														Digital Camera (Silver)</a></h6>
-												<div class="product_price">$520.00<span>$590.00</span></div>
+												<h6 class="product_name"><a href="single.html">Pulpito Chicas
+														Superpoderosas</a></h6>
+												<div class="product_price">$180.00</div>
 											</div>
 										</div>
 									</div>
@@ -553,20 +657,16 @@
 								<!-- Slide 2 -->
 
 								<div class="owl-item product_slider_item">
-									<div class="product-item women">
-										<div class="product">
+									<div class="product-item *">
+										<div class="product discount product_filter">
 											<div class="product_image">
-												<img src="images/product_2.png" alt="">
+												<img src="images/aliens.PNG" alt=""
+													style="height: 35vh; padding: 10px;">
 											</div>
 											<div class="favorite"></div>
-											<div
-												class="product_bubble product_bubble_left product_bubble_green d-flex flex-column align-items-center">
-												<span>new</span>
-											</div>
 											<div class="product_info">
-												<h6 class="product_name"><a href="single.html">Samsung CF591 Series
-														Curved 27-Inch FHD Monitor</a></h6>
-												<div class="product_price">$610.00</div>
+												<h6 class="product_name"><a href="single.html">Aliens</a></h6>
+												<div class="product_price">$520.00<span>$590.00</span></div>
 											</div>
 										</div>
 									</div>
@@ -575,16 +675,16 @@
 								<!-- Slide 3 -->
 
 								<div class="owl-item product_slider_item">
-									<div class="product-item women">
-										<div class="product">
+									<div class="product-item animalitos">
+										<div class="product product_filter">
 											<div class="product_image">
-												<img src="images/product_3.png" alt="">
+												<img src="images/ajolotes.PNG" alt=""
+													style="height: 35vh; padding: 20px;">
 											</div>
 											<div class="favorite"></div>
 											<div class="product_info">
-												<h6 class="product_name"><a href="single.html">Blue Yeti USB Microphone
-														Blackout Edition</a></h6>
-												<div class="product_price">$120.00</div>
+												<h6 class="product_name"><a href="single.html">Ajolotitos</a></h6>
+												<div class="product_price">$180.00</div>
 											</div>
 										</div>
 									</div>
@@ -593,21 +693,14 @@
 								<!-- Slide 4 -->
 
 								<div class="owl-item product_slider_item">
-									<div class="product-item accessories">
-										<div class="product">
-											<div class="product_image">
-												<img src="images/product_4.png" alt="">
-											</div>
-											<div
-												class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center">
-												<span>sale</span>
-											</div>
-											<div class="favorite favorite_left"></div>
-											<div class="product_info">
-												<h6 class="product_name"><a href="single.html">DYMO LabelWriter 450
-														Turbo Thermal Label Printer</a></h6>
-												<div class="product_price">$410.00</div>
-											</div>
+									<div class="product product_filter">
+										<div class="product_image">
+											<img src="images/zorrito.PNG" alt="" style="height: 35vh; padding: 20px;">
+										</div>
+										<div class="favorite"></div>
+										<div class="product_info">
+											<h6 class="product_name"><a href="single.html">Zorrito</a></h6>
+											<div class="product_price">$120.00</div>
 										</div>
 									</div>
 								</div>
@@ -615,38 +708,34 @@
 								<!-- Slide 5 -->
 
 								<div class="owl-item product_slider_item">
-									<div class="product-item women men">
-										<div class="product">
+									<div class="product-item flores">
+										<div class="product product_filter">
 											<div class="product_image">
-												<img src="images/product_5.png" alt="">
+												<img src="images/girasoles.PNG" alt=""
+													style="height: 35vh; padding: 20px;">
 											</div>
 											<div class="favorite"></div>
 											<div class="product_info">
-												<h6 class="product_name"><a href="single.html">Pryma Headphones, Rose
-														Gold & Grey</a></h6>
+												<h6 class="product_name"><a href="single.html">Girasoles</a></h6>
 												<div class="product_price">$180.00</div>
 											</div>
 										</div>
 									</div>
+
 								</div>
 
 								<!-- Slide 6 -->
 
 								<div class="owl-item product_slider_item">
-									<div class="product-item accessories">
-										<div class="product discount">
+									<div class="product-item animalitos">
+										<div class="product product_filter">
 											<div class="product_image">
-												<img src="images/product_6.png" alt="">
+												<img src="images/gato.PNG" alt="" style="height: 35vh; padding: 20px;">
 											</div>
-											<div class="favorite favorite_left"></div>
-											<div
-												class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center">
-												<span>-$20</span>
-											</div>
+											<div class="favorite"></div>
 											<div class="product_info">
-												<h6 class="product_name"><a href="single.html">Fujifilm X100T 16 MP
-														Digital Camera (Silver)</a></h6>
-												<div class="product_price">$520.00<span>$590.00</span></div>
+												<h6 class="product_name"><a href="single.html">Gato</a></h6>
+												<div class="product_price">$180.00</div>
 											</div>
 										</div>
 									</div>
@@ -655,16 +744,20 @@
 								<!-- Slide 7 -->
 
 								<div class="owl-item product_slider_item">
-									<div class="product-item women">
-										<div class="product">
+									<div class="product-item llaveros">
+										<div class="product product_filter">
 											<div class="product_image">
-												<img src="images/product_7.png" alt="">
+												<img src="images/nubesita.PNG" alt=""
+													style="height: 35vh; padding: 10px;">
 											</div>
-											<div class="favorite"></div>
+											<div
+												class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center">
+												<span>sale</span>
+											</div>
+											<div class="favorite favorite_left"></div>
 											<div class="product_info">
-												<h6 class="product_name"><a href="single.html">Samsung CF591 Series
-														Curved 27-Inch FHD Monitor</a></h6>
-												<div class="product_price">$610.00</div>
+												<h6 class="product_name"><a href="single.html">Nubesita</a></h6>
+												<div class="product_price">$410.00</div>
 											</div>
 										</div>
 									</div>
@@ -673,16 +766,15 @@
 								<!-- Slide 8 -->
 
 								<div class="owl-item product_slider_item">
-									<div class="product-item accessories">
-										<div class="product">
+									<div class="product-item caricaturas">
+										<div class="product product_filter">
 											<div class="product_image">
-												<img src="images/product_8.png" alt="">
+												<img src="images/pejes.PNG" alt="" style="height: 35vh; padding: 2px;">
 											</div>
 											<div class="favorite"></div>
 											<div class="product_info">
-												<h6 class="product_name"><a href="single.html">Blue Yeti USB Microphone
-														Blackout Edition</a></h6>
-												<div class="product_price">$120.00</div>
+												<h6 class="product_name"><a href="single.html">Mini Amlos</a></h6>
+												<div class="product_price">$610.00</div>
 											</div>
 										</div>
 									</div>
@@ -691,37 +783,15 @@
 								<!-- Slide 9 -->
 
 								<div class="owl-item product_slider_item">
-									<div class="product-item men">
-										<div class="product">
+									<div class="product-item flores">
+										<div class="product product_filter">
 											<div class="product_image">
-												<img src="images/product_9.png" alt="">
-											</div>
-											<div
-												class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center">
-												<span>sale</span>
-											</div>
-											<div class="favorite favorite_left"></div>
-											<div class="product_info">
-												<h6 class="product_name"><a href="single.html">DYMO LabelWriter 450
-														Turbo Thermal Label Printer</a></h6>
-												<div class="product_price">$410.00</div>
-											</div>
-										</div>
-									</div>
-								</div>
-
-								<!-- Slide 10 -->
-
-								<div class="owl-item product_slider_item">
-									<div class="product-item men">
-										<div class="product">
-											<div class="product_image">
-												<img src="images/product_10.png" alt="">
+												<img src="images/tulipanes.PNG" alt=""
+													style="height: 35vh; padding: 20px;">
 											</div>
 											<div class="favorite"></div>
 											<div class="product_info">
-												<h6 class="product_name"><a href="single.html">Pryma Headphones, Rose
-														Gold & Grey</a></h6>
+												<h6 class="product_name"><a href="single.html">Tulipanes</a></h6>
 												<div class="product_price">$180.00</div>
 											</div>
 										</div>
@@ -754,7 +824,7 @@
 						<div class="benefit_item d-flex flex-row align-items-center">
 							<div class="benefit_icon"><i class="fa fa-truck" aria-hidden="true"></i></div>
 							<div class="benefit_content">
-								<h6>free shipping</h6>
+								<h6>Calidad</h6>
 								<p>Suffered Alteration in Some Form</p>
 							</div>
 						</div>
@@ -763,11 +833,12 @@
 						<div class="benefit_item d-flex flex-row align-items-center">
 							<div class="benefit_icon"><i class="fa fa-money" aria-hidden="true"></i></div>
 							<div class="benefit_content">
-								<h6>cach on delivery</h6>
+								<h6>Precio</h6>
 								<p>The Internet Tend To Repeat</p>
 							</div>
 						</div>
 					</div>
+					<!--
 					<div class="col-lg-3 benefit_col">
 						<div class="benefit_item d-flex flex-row align-items-center">
 							<div class="benefit_icon"><i class="fa fa-undo" aria-hidden="true"></i></div>
@@ -777,11 +848,12 @@
 							</div>
 						</div>
 					</div>
+				-->
 					<div class="col-lg-3 benefit_col">
 						<div class="benefit_item d-flex flex-row align-items-center">
 							<div class="benefit_icon"><i class="fa fa-clock-o" aria-hidden="true"></i></div>
 							<div class="benefit_content">
-								<h6>opening all week</h6>
+								<h6>Horario de Atencion</h6>
 								<p>8AM - 09PM</p>
 							</div>
 						</div>
@@ -790,7 +862,7 @@
 			</div>
 		</div>
 
-		<!-- Blogs -->
+		<!-- Blogs 
 
 		<div class="blogs">
 			<div class="container">
@@ -838,8 +910,8 @@
 				</div>
 			</div>
 		</div>
-
-		<!-- Newsletter -->
+	-->
+		<!-- Newsletter 
 
 		<div class="newsletter">
 			<div class="container">
@@ -847,7 +919,7 @@
 					<div class="col-lg-6">
 						<div
 							class="newsletter_text d-flex flex-column justify-content-center align-items-lg-start align-items-md-center text-center">
-							<h4>Newsletter</h4>
+							<h4>Gisea Amigurumis</h4>
 							<p>Subscribe to our newsletter and get 20% off your first purchase</p>
 						</div>
 					</div>
@@ -865,7 +937,7 @@
 				</div>
 			</div>
 		</div>
-
+	-->
 		<!-- Footer -->
 
 		<footer class="footer">
@@ -875,9 +947,10 @@
 						<div
 							class="footer_nav_container d-flex flex-sm-row flex-column align-items-center justify-content-lg-start justify-content-center text-center">
 							<ul class="footer_nav">
-								<li><a href="#">Blog</a></li>
-								<li><a href="#">FAQs</a></li>
-								<li><a href="contact.html">Contact us</a></li>
+								<li><a href="#">Inicio</a></li>
+								<li><a href="#">Personaliza tu Amigurumi</a></li>
+								<li><a href="#">Nuestros Clientes Opinan</a></li>
+								<li><a href="contact.html">Contactame</a></li>
 							</ul>
 						</div>
 					</div>
@@ -886,9 +959,8 @@
 							class="footer_social d-flex flex-row align-items-center justify-content-lg-end justify-content-center">
 							<ul>
 								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+								<li><a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
 							</ul>
 						</div>
@@ -897,9 +969,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="footer_nav_container">
-							<div class="cr">©2018 All Rights Reserverd. Made with <i class="fa fa-heart-o"
-									aria-hidden="true"></i> by <a href="#">Colorlib</a> &amp; distributed by <a
-									href="https://themewagon.com">ThemeWagon</a></div>
+							<div class="cr">©Gisea Amigurumis</div>
 						</div>
 					</div>
 				</div>
